# temporal-wasm

./: .gitignore  README.md
go/host/: go.mod  go.sum  types.go  wazero.go  workflow.go  workflow_run.go
go/host/cmd/temporal-wasm-worker/: main.go
go/workflow/: go.mod
rust/workflow/: Cargo.toml
rust/workflow/examples/: hello_world.rs
rust/workflow/src/: lib.rs
spec/: spec.md
